# Progetto_SCPA

./: .gitignore  CMakeLists.txt  ProdottoAB.c  README.md  cuda.sub
cuda/: CMakeLists.txt  Cuda-prod-ms-read.cu  Cuda-prod-ms-v2-kobero.cu  Cuda-prod-ms-v2.cu  Cuda-prod-ms.cu  Cuda-prod-v2.cu  Cuda-prod.cu  file.py  file_prova.sh  performance.py  start.sh  start_error.sh
fanfa-tmp/: CMakeLists.txt  Notes.txt  cuda.sub
fanfa-tmp/matvec-utils/: Matrix-vector-prod-topology.c
fanfa-tmp/project-base/: 01-matrix_matrix.cu  CMakeLists.txt
mpi/: MPI-matrix-gen.c  MPI-prod-fanfa  MPI-prod-fanfa.c  MPI-prod-kobero.c  MPI-prod.c  Makefile  matrixGeneratorMPI.c  plot.py  start.sh  test.py
mpi/fanfa-result/: result-1000-1-1  result-1000-1-12  result-1000-1-16  result-1000-1-20  result-1000-1-4  result-1000-1-8  result-1000-16-12  result-1000-16-16  result-1000-16-20  result-1000-16-4  result-1000-16-8  result-1000-2-12  result-1000-2-16  result-1000-2-20  result-1000-2-4  result-1000-2-8  result-1000-4-12  result-1000-4-16  result-1000-4-20  result-1000-4-4  result-1000-4-8  result-1000-8-12  result-1000-8-16  result-1000-8-20  result-1000-8-4  result-1000-8-8  result-10000-1-12  result-10000-1-16  result-10000-1-20  result-10000-1-4  result-10000-1-8  result-10000-16-12  result-10000-16-16  result-10000-16-20  result-10000-16-4  result-10000-16-8  result-10000-2-12  result-10000-2-16  result-10000-2-20  result-10000-2-4  (+219 more)
mpi/kobero-result/: result-1000-1  result-1000-12  result-1000-16  result-1000-20  result-1000-4  result-1000-8  result-10000-12  result-10000-16  (+48 more)
(+2 files in other folders)
